--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2326,7 +2326,8 @@ pre code {
     .col-sm-7,
     .col-sm-8,
     .col-sm-9 {
-        float: left;
+        /*float: left;*/
+        justify-content: center;
     }
 
     .col-sm-4 {
@@ -5409,16 +5410,25 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-brand:focus,
 .navbar-brand:hover {
     text-decoration: none;
+    color:red;
 }
 
 .navbar-brand > img {
     display: block;
 }
 
+.navbar-brand > img:focus {
+    color:red;
+}
+
 @media (min-width: 768px) {
     .navbar > .container .navbar-brand,
     .navbar > .container-fluid .navbar-brand {
         margin-left: -15px;
+    }
+
+    .navbar-brand:focus {
+        color:red;
     }
 }
 
