Modifications attribut ARIA, label formulaire

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6,13 +6,10 @@
 
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 
-html {
+body {
     font-family: sans-serif;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
-}
-
-body {
     margin: 0;
 }
 
@@ -3909,7 +3906,7 @@ textarea.input-lg {
 .btn[disabled],
 fieldset[disabled] .btn {
     cursor: not-allowed;
-    filter: alpha(opacity = 65);
+    filter: opacity(65%);
     -webkit-box-shadow: none;
     box-shadow: none;
     opacity: 0.65;
@@ -7294,7 +7291,7 @@ button.list-group-item-danger.active:hover {
     line-height: 1;
     color: #000;
     text-shadow: 0 1px 0 #fff;
-    filter: alpha(opacity = 20);
+    filter: opacity(20%);
     opacity: 0.2;
 }
 
@@ -7303,7 +7300,7 @@ button.list-group-item-danger.active:hover {
     color: #000;
     text-decoration: none;
     cursor: pointer;
-    filter: alpha(opacity = 50);
+    filter: opacity(50%);
     opacity: 0.5;
 }
 
@@ -7384,12 +7381,12 @@ button.close {
 }
 
 .modal-backdrop.fade {
-    filter: alpha(opacity = 0);
+    filter: opacity(0);
     opacity: 0;
 }
 
 .modal-backdrop.in {
-    filter: alpha(opacity = 50);
+    filter: opacity(50%);
     opacity: 0.5;
 }
 
@@ -7481,13 +7478,13 @@ button.close {
     word-spacing: normal;
     word-wrap: normal;
     white-space: normal;
-    filter: alpha(opacity = 0);
+    filter: opacity(0);
     opacity: 0;
     line-break: auto;
 }
 
 .tooltip.in {
-    filter: alpha(opacity = 90);
+    filter: opacity(90%);
     opacity: 0.9;
 }
 
@@ -7847,14 +7844,13 @@ button.close {
     color: #fff;
     text-align: center;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-    filter: alpha(opacity = 50);
+    filter: opacity(50%);
     opacity: 0.5;
 }
 
 .carousel-control.left {
     background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.5) 0, rgba(0, 0, 0, 0.0001) 100%);
     background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.5) 0, rgba(0, 0, 0, 0.0001) 100%);
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.0001)));
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0, rgba(0, 0, 0, 0.0001) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
     background-repeat: repeat-x;
@@ -7875,7 +7871,7 @@ button.close {
 .carousel-control:hover {
     color: #fff;
     text-decoration: none;
-    filter: alpha(opacity = 90);
+    filter: opacity(90%);
     outline: 0;
     opacity: 0.9;
 }
