--- a/style.css
+++ b/style.css
@@ -820,7 +820,7 @@ h3 > p {
     color: #FFFFFF !important;
 }
 
-
+/*focus pour clavier*/
 .btn-atomic-tangerine:focus {
     text-decoration:underline;
     box-shadow: 10px 10px orangered;
